[STYLE] Ajustes texto do worker que envia emails contras atrasadas